--- a/HTML/General/AddCustomControls.html
+++ b/HTML/General/AddCustomControls.html
@@ -48,6 +48,12 @@
         Select the file LJCWinFormControls.dll.
       </p>
     </div>
+    <div class="PathText">
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
+      / LJCCustomControls
+    </div>
+    <br />
     <div class="SmallText">
       Copyright &copy Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
