--- a/HTML/General/HowToUseLJCProjects.html
+++ b/HTML/General/HowToUseLJCProjects.html
@@ -114,6 +114,12 @@
         command files used for building the projects.
       </p>
     </div>
+    <div class="PathText">
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
+      / LJCProjects
+    </div>
+    <br />
     <div class="SmallText">
       Copyright &copy Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
