--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -44,10 +44,10 @@
       </p>
       <p>
         How to add DataTable Rows to an LJCDataGrid using
-        <a href="DataAccess/AddDataRowsToGrid.html">TableData</a>.
+        <a href="DataAccess/DataAccessRetrieve.html">TableData</a>.
       </p>
       <p>
-        How to get a <a href="DataAccess/GetRowObject.html">Data Object</a>
+        How to get a <a href="DataAccess/GetRowDataObject.html">Data Object</a>
         from an LJCGridRow.
       </p>
 
