--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -73,6 +73,23 @@
         How to update data using
         <a href="SQLManager/UpdateWithFilters.html">Filters</a>.
       </p>
+
+      <h4>ProvinceSQLManager</h4>
+      <p>
+        A <a href="ProvinceManager/SmartDataObject.html">Smart Data Object</a>.
+      </p>
+      <p>
+        How to <a href="ProvinceManager/AddProvince.html">Add</a> a Province record.
+      </p>
+      <p>
+        How to <a href="ProvinceManager/LoadProvince.html">Load</a> Province records in an LJCDataGrid.
+      </p>
+      <p>
+        How to <a href="ProvinceManager/RetrieveProvince.html">Retrieve</a> a Province record.
+      </p>
+      <p>
+        How to <a href="ProvinceManager/UpdateProvince.html">Update</a> a Province record.
+      </p>
     </div>
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
