--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -79,6 +79,9 @@
         A <a href="ProvinceManager/SmartDataObject.html">Smart Data Object</a>.
       </p>
       <p>
+        A <a href="ProvinceManager/ProvinceSpecificManager.html">Strong Typed Province Manager</a>.
+      </p>
+      <p>
         How to <a href="ProvinceManager/AddProvince.html">Add</a> a Province record.
       </p>
       <p>
