--- a/HTML/ProvinceManager/ProvinceSpecificManager.html
+++ b/HTML/ProvinceManager/ProvinceSpecificManager.html
@@ -27,12 +27,12 @@
     </div>
     <div class='Text'>
       <p>
-        This Strong Typed Manager is specific to the Provider Data Object and
-        the associated Provider Table. This makes it easier to use with less
+        This Strong Typed Manager is specific to the Province Data Object and
+        the associated Province Table. This makes it easier to use with less
         application code than the SQLManager alone.
       </p>
       <p>
-        This class encapsulates the setup code for the Provider Data Object
+        This class encapsulates the setup code for the Province Data Object
         and prevents it from having to be repeated everywhere it is used in
         the application code.
       </p>
@@ -225,7 +225,7 @@
   <span class='modifier'>public</span> ResultConverter<Province, Provinces> ResultConverter { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
 
   <span class='xmlComment'>/// &lt;summary&gt;Gets the SQLManager reference.&lt;/summary&gt;</span>
-  <span class='modifier'>public</span> <span class='userType'>SQLManager</span> <span class='userType'>SQLManager</span> { <span class='keyWord'>get</span>; private <span class='keyWord'>set</span>; }
+  <span class='modifier'>public</span> <span class='userType'>SQLManager</span> SQLManager { <span class='keyWord'>get</span>; private <span class='keyWord'>set</span>; }
 
   <span class='xmlComment'>/// &lt;summary&gt;Gets or sets the last SQL statement.&lt;/summary&gt;</span>
   <span class='modifier'>public</span> <span class='commonType'>string</span> SQLStatement { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
