--- a/HTML/ProvinceManager/AddProvince.html
+++ b/HTML/ProvinceManager/AddProvince.html
@@ -41,9 +41,9 @@
   <span class='commonType'>var</span> province = <span class='keyWord'>new</span> <span class='userType'>Province</span>()
   {
     RegionID = 1,
-    Name = "ProvinceName",
-    Description = "A Sample Province",
-    Abbreviation = "PN"
+    Name = <span class='text'>"ProvinceName"</span>,
+    Description = <span class='text'>"A Sample Province"</span>,
+    Abbreviation = <span class='text'>"PN"</span>
   };
   <span class='commonType'>var</span> resultProvince = manager.Add(province);
   <span class='commonType'>var</span> addedID = resultProvince.ID;
