--- a/HTML/ProvinceManager/RetrieveProvince.html
+++ b/HTML/ProvinceManager/RetrieveProvince.html
@@ -32,7 +32,7 @@
       </p>
       <pre>
 <span class='comment'>// Retrieve a Data Object.</span>
-<span class='modifier'>internal</span> Province RetrieveProvince(string connectionString, <span class='commonType'>string</span> providerName)
+<span class='modifier'>internal</span> <span class="userType">Province</span> RetrieveProvince(string connectionString, <span class='commonType'>string</span> providerName)
 {
   Province retValue;
 
