--- a/HTML/ProvinceManager/ProvinceSpecificManager.html
+++ b/HTML/ProvinceManager/ProvinceSpecificManager.html
@@ -61,7 +61,7 @@
 
     SQLManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(dataConfigName, tableName, connectionString
     , providerName);
-    <span class='keyWord'>if</span> <span class='userType'>SQLManager</span>r.DataDefinition != null)
+    <span class='keyWord'>if</span> <span class='userType'>SQLManager</span>.DataDefinition != null)
     {
       BaseDefinition = <span class='userType'>SQLManager</span>.DataDefinition;
       DataDefinition = BaseDefinition.Clone();
@@ -85,12 +85,12 @@
 
   <span class='comment'>// Adds a record to the database.</span>
   <span class='xmlComment'>/// &lt;include path='items/Add/*' file='../../LJCDocLib/Common/SQLManager.xml' /&gt;</span>
-  <span class='modifier'>public</span> Province Add(Province dataObject, <span class='libType'>List</span><string> propertyNames = null)
+  <span class='modifier'>public</span> <span class="userType">Province</span> Add(<span class="userType">Province</span> dataObject, <span class='libType'>List</span><string> propertyNames = null)
   {
     Province retValue = <span class='keyWord'>null</span>;
 
     <span class='comment'>// The data record must not contain a value for DB Assigned columns.</span>
-    DataTable dataTable = <span class='userType'>SQLManager</span>.Add(dataObject, propertyNames);
+    <span class="userType">DataTable</span> dataTable = <span class='userType'>SQLManager</span>.Add(dataObject, propertyNames);
     AffectedCount = <span class='userType'>SQLManager</span>.AffectedCount;
     SQLStatement = <span class='userType'>SQLManager</span>.SQLStatement;
     <span class='keyWord'>if</span> (dataTable != null)
@@ -102,7 +102,7 @@
 
   <span class='comment'>// Deletes the records with the specified key values.</span>
   <span class='xmlComment'>/// &lt;include path='items/Delete/*' file='../../LJCDocLib/Common/SQLManager.xml' /&gt;</span>
-  <span class='modifier'>public</span> <span class='commonType'>void</span> Delete(DbColumns keyColumns, DbFilters filters = null)
+  <span class='modifier'>public</span> <span class='commonType'>void</span> Delete(<span class="userType">DbColumns</span> keyColumns, <span class="userType">DbFilters</span> filters = null)
   {
     <span class='userType'>SQLManager</span>.Delete(keyColumns, filters);
     AffectedCount = <span class='userType'>SQLManager</span>.AffectedCount;
@@ -111,13 +111,13 @@
 
   <span class='comment'>// Loads a collection of data records.</span>
   <span class='xmlComment'>/// &lt;include path='items/Load/*' file='../../LJCDocLib/Common/DbManager.xml' /&gt;</span>
-  <span class='modifier'>public</span> Provinces Load(DbColumns keyColumns = <span class='keyWord'>null</span>
-  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, DbFilters filters = <span class='keyWord'>null</span>
+  <span class='modifier'>public</span> <span class="userType">Provinces</span> Load(<span class="userType">DbColumns</span> keyColumns = <span class='keyWord'>null</span>
+  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, <span class="userType">DbFilters</span> filters = <span class='keyWord'>null</span>
   , DbJoins joins = null)
   {
-    Provinces retValue = <span class='keyWord'>null</span>;
+    <span class="userType">Provinces</span> retValue = <span class='keyWord'>null</span>;
 
-    DataTable dataTable = LoadDataTable(keyColumns, propertyNames, filters
+    <span class="userType">DataTable</span> dataTable = LoadDataTable(keyColumns, propertyNames, filters
     , joins);
     <span class='keyWord'>if</span> (dataTable != null)
     {
@@ -126,11 +126,11 @@
     <span class='keyWord'>return</span> retValue;
   }
 
-  <span class='modifier'>public</span> DataTable LoadDataTable(DbColumns keyColumns = <span class='keyWord'>null</span>
-  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, DbFilters filters = <span class='keyWord'>null</span>
-  , DbJoins joins = null)
+  <span class='modifier'>public</span> DataTable LoadDataTable(<span class="userType">DbColumns</span> keyColumns = <span class='keyWord'>null</span>
+  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, <span class="userType">DbFilters</span> filters = <span class='keyWord'>null</span>
+  , <span class="userType">DbJoins</span> joins = null)
   {
-    DataTable retValue;
+    <span class="userType">DataTable</span> retValue;
 
     retValue = <span class='userType'>SQLManager</span>.GetDataTable(keyColumns, propertyNames
     , filters, joins);
@@ -140,13 +140,13 @@
 
   <span class='comment'>// Retrieves a record from the database.</span>
   <span class='xmlComment'>/// &lt;include path='items/Retrieve/*' file='../../LJCDocLib/Common/DbManager.xml' /&gt;</span>
-  <span class='modifier'>public</span> Province Retrieve(DbColumns keyColumns
-  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, DbFilters filters = <span class='keyWord'>null</span>
-  , DbJoins joins = null)
+  <span class='modifier'>public</span> Province Retrieve(<span class="userType">DbColumns</span> keyColumns
+  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, <span class="userType">DbFilters</span> filters = <span class='keyWord'>null</span>
+  , <span class="userType">DbJoins</span> joins = null)
   {
-    Province retValue = <span class='keyWord'>null</span>;
+    <span class="userType">Province</span> retValue = <span class='keyWord'>null</span>;
 
-    DataTable dataTable = <span class='userType'>SQLManager</span>.GetDataTable(keyColumns, propertyNames
+    <span class="userType">DataTable</span> dataTable = <span class='userType'>SQLManager</span>.GetDataTable(keyColumns, propertyNames
     , filters, joins);
     SQLStatement = <span class='userType'>SQLManager</span>.SQLStatement;
     <span class='keyWord'>if</span> (dataTable != null)
@@ -158,8 +158,8 @@
 
   <span class='comment'>// Updates the record.</span>
   <span class='xmlComment'>/// &lt;include path='items/Update/*' file='../../LJCDocLib/Common/SQLManager.xml' /&gt;</span>
-  <span class='modifier'>public</span> <span class='commonType'>void</span> Update(Province dataObject, DbColumns keyColumns
-  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, DbFilters filters = null)
+  <span class='modifier'>public</span> <span class='commonType'>void</span> Update(<span class="userType">Province</span> dataObject, <span class="userType">DbColumns</span> keyColumns
+  , <span class='userType'>List</span><string> propertyNames = <span class='keyWord'>null</span>, <span class="userType">DbFilters</span> filters = null)
   {
     <span class='userType'>SQLManager</span>.Update(dataObject, keyColumns, propertyNames, filters);
     AffectedCount = <span class='userType'>SQLManager</span>.AffectedCount;
@@ -171,7 +171,7 @@
 
   <span class='comment'>// Gets the ID key record.</span>
   <span class='xmlComment'>/// &lt;include path='items/GetIDKey/*' file='../../LJCDocLib/Common/Manager.xml' /&gt;</span>
-  <span class='modifier'>public</span> DbColumns GetIDKey(int id)
+  <span class='modifier'>public</span> <span class="userType">DbColumns</span> GetIDKey(int id)
   {
     <span class='commonType'>var</span> retValue = <span class='keyWord'>new</span> <span class='userType'>DbColumns</span>()
     {
@@ -184,11 +184,11 @@
   #region Private Methods
 
   <span class='comment'>// Creates the object from the first data row.</span>
-  <span class='modifier'>private</span> Province CreateProvince(DataTable dataTable)
+  <span class='modifier'>private</span> <span class="userType">Province</span> CreateProvince(DataTable dataTable)
   {
-    Province retValue = <span class='keyWord'>null</span>;
+    <span class="userType">Province</span> retValue = <span class='keyWord'>null</span>;
 
-    <span class='keyWord'>if</span> (NetCommon.HasData(dataTable))
+    <span class='keyWord'>if</span> (<span class="userType">NetCommon</span>.HasData(dataTable))
     {
       retValue = ResultConverter.CreateDataFromTable(dataTable
       , dataTable.Rows[0], <span class='userType'>SQLManager</span>.DataDefinition);
@@ -197,11 +197,11 @@
   }
 
   <span class='comment'>// Creates the collection from a DataTable.</span>
-  <span class='modifier'>private</span> Provinces CreateProvinces(DataTable dataTable)
+  <span class='modifier'>private</span> <span class="userType">Provinces</span> CreateProvinces(<span class="userType">DataTable</span> dataTable)
   {
-    Provinces retValue = <span class='keyWord'>null</span>;
+    <span class="userType">Provinces</span> retValue = <span class='keyWord'>null</span>;
 
-    <span class='keyWord'>if</span> (NetCommon.HasData(dataTable))
+    <span class='keyWord'>if</span> (<span class="userType">NetCommon</span>.HasData(dataTable))
     {
       retValue = ResultConverter.CreateCollectionFromTable(dataTable
       , <span class='userType'>SQLManager</span>.DataDefinition);
