--- a/HTML/ProvinceManager/UpdateProvince.html
+++ b/HTML/ProvinceManager/UpdateProvince.html
@@ -32,13 +32,13 @@
       </p>
       <pre class="code">
 <span class='comment'>// Update a Data Object.</span>
-<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateProvince(Province province, <span class='commonType'>string</span> connectionString
+<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateProvince(<span class="userType">Province</span> province, <span class='commonType'>string</span> connectionString
 , <span class='commonType'>string</span> providerName)
 {
   <span class='commonType'>var</span> manager = <span class='keyWord'>new</span> <span class='userType'>ProvinceSQLManager</span>(null, null, connectionString
   , providerName);
 
-  province.Description = "Updated Description";
+  province.Description = <span class='text'>"Updated Description"</span>;
 
   <span class='comment'>// Identify the records to be selected.</span>
   <span class='commonType'>var</span> keyColumns = manager.GetIDKey(1);
