--- a/HTML/ProvinceManager/ProvinceSpecificManager.html
+++ b/HTML/ProvinceManager/ProvinceSpecificManager.html
@@ -184,7 +184,7 @@
   #region Private Methods
 
   <span class='comment'>// Creates the object from the first data row.</span>
-  <span class='modifier'>private</span> <span class="userType">Province</span> CreateProvince(DataTable dataTable)
+  <span class='modifier'>private</span> <span class="userType">Province</span> CreateProvince(<span class="userType">DataTable</span> dataTable)
   {
     <span class="userType">Province</span> retValue = <span class='keyWord'>null</span>;
 
