--- a/HTML/ProvinceManager/ProvinceSpecificManager.html
+++ b/HTML/ProvinceManager/ProvinceSpecificManager.html
@@ -54,7 +54,7 @@
   <span class='modifier'>public</span> <span class='commonType'>void</span> Reset(string dataConfigName, <span class='commonType'>string</span> tableName
     , <span class='commonType'>string</span> connectionString = <span class='keyWord'>null</span>, <span class='commonType'>string</span> providerName = null)
   {
-    <span class='keyWord'>if</span> <span class='keyWord'>null</span>l == tableName)
+    <span class='keyWord'>if</span> <span class='keyWord'>null</span> == tableName)
     {
       tableName = <span class='text'>"Province"</span>;
     }
