--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -53,6 +53,9 @@
 
       <h4>SQLManager</h4>
       <p>
+        The Example <a href="SQLManager/DataObject.html">Data Object</a>.
+      </p>
+      <p>
         How to <a href="SQLManager/Add.html">Add</a> a data record.
       </p>
       <p>
@@ -94,6 +97,11 @@
         How to <a href="ProvinceManager/UpdateProvince.html">Update</a> a Province record.
       </p>
     </div>
+    <div class="PathText">
+      / <a href="../index.html">Home</a>
+      / HowTo
+    </div>
+    <br />
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
