--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -79,7 +79,7 @@
 
       <h4>ProvinceSQLManager</h4>
       <p>
-        A <a href="ProvinceManager/SmartDataObject.html">Smart Data Object</a>.
+        The <a href="ProvinceManager/SmartDataObject.html">Smart Data Object</a>.
       </p>
       <p>
         A <a href="ProvinceManager/ProvinceSpecificManager.html">Strong Typed Province Manager</a>.
