--- a/HTML/DataAccess/DataAccessRetrieve.html
+++ b/HTML/DataAccess/DataAccessRetrieve.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / AddGridDataRows
     </div>
     <br />
@@ -96,7 +96,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / AddGridDataRows
     </div>
     <br />
