--- a/HTML/DataAccess/GetRowDataObject.html
+++ b/HTML/DataAccess/GetRowDataObject.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / GetRowDataObject
     </div>
     <br />
@@ -60,7 +60,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / GetRowDataObject
     </div>
     <br />
