--- a/HTML/General/HowToUseLJCProjects.html
+++ b/HTML/General/HowToUseLJCProjects.html
@@ -17,7 +17,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#General">HowTo</a>
       / LJCProjects
     </div>
     <br />
@@ -116,7 +116,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#General">HowTo</a>
       / LJCProjects
     </div>
     <br />
