--- a/HTML/ProvinceManager/AddProvince.html
+++ b/HTML/ProvinceManager/AddProvince.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / AddProvince
     </div>
     <br />
@@ -50,7 +50,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / AddProvince
     </div>
     <br />
