--- a/HTML/SQLManager/Retrieve.html
+++ b/HTML/SQLManager/Retrieve.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / Retrieve
     </div>
     <br />
@@ -87,7 +87,7 @@ See the Technical Documentation for more information.</pre>
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / SQLManagerSelect
     </div>
     <br />
