--- a/HTML/SQLManager/RetrieveWithRowValues.html
+++ b/HTML/SQLManager/RetrieveWithRowValues.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / RetrieveWithSavedValues
     </div>
     <br />
@@ -79,7 +79,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / RetrieveWithSavedValues
     </div>
     <br />
