--- a/HTML/DataAccess/ConfigDataAccessWithBuilder.html
+++ b/HTML/DataAccess/ConfigDataAccessWithBuilder.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / ConnectionStringBuilder
     </div>
     <br />
@@ -164,7 +164,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / ConnectionStringBuilder
     </div>
     <br />
