--- a/HTML/DataAccess/ConfigDataAccessWithConfigs.html
+++ b/HTML/DataAccess/ConfigDataAccessWithConfigs.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / DataConfigs
     </div>
     <br />
@@ -115,7 +115,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / DataConfigs
     </div>
     <br />
