--- a/HTML/General/AddCustomControls.html
+++ b/HTML/General/AddCustomControls.html
@@ -17,7 +17,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#General">HowTo</a>
       / LJCCustomControls
     </div>
     <br />
@@ -50,7 +50,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#General">HowTo</a>
       / LJCCustomControls
     </div>
     <br />
