--- a/HTML/ProvinceManager/LoadProvince.html
+++ b/HTML/ProvinceManager/LoadProvince.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / LoadProvince
     </div>
     <br />
@@ -59,7 +59,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / LoadProvince
     </div>
     <br />
