--- a/HTML/ProvinceManager/ProvinceSpecificManager.html
+++ b/HTML/ProvinceManager/ProvinceSpecificManager.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / ProvinceManager
     </div>
     <br />
@@ -235,7 +235,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / ProvinceManager
     </div>
     <br />
