--- a/HTML/ProvinceManager/SmartDataObject.html
+++ b/HTML/ProvinceManager/SmartDataObject.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / SmartDataObject
     </div>
     <br />
@@ -119,7 +119,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / SmartDataObject
     </div>
     <br />
