--- a/HTML/ProvinceManager/UpdateProvince.html
+++ b/HTML/ProvinceManager/UpdateProvince.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / UpdateProvince
     </div>
     <br />
@@ -47,7 +47,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
       / UpdateProvince
     </div>
     <br />
