--- a/HTML/SQLManager/Add.html
+++ b/HTML/SQLManager/Add.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / AddRecord
     </div>
     <br />
@@ -69,7 +69,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / AddRecord
     </div>
     <br />
