--- a/HTML/SQLManager/DataObject.html
+++ b/HTML/SQLManager/DataObject.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / DataObject
     </div>
     <br />
@@ -48,7 +48,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / DataObject
     </div>
     <br />
