--- a/HTML/SQLManager/UpdateWithFilters.html
+++ b/HTML/SQLManager/UpdateWithFilters.html
@@ -18,7 +18,7 @@
     <br />
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / UpdateWithFilters
     </div>
     <br />
@@ -64,7 +64,7 @@
     </div>
     <div class="PathText">
       / <a href="../../index.html">Home</a>
-      / <a href="../Tutorials.html">HowTo</a>
+      / <a href="../Tutorials.html#SQLManager">HowTo</a>
       / UpdateWithFilters
     </div>
     <br />
