--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -24,7 +24,7 @@
       <div id='Title'>LJC Code Examples</div>
     </div>
     <div class='Text'>
-      <h4>General Topics</h4>
+      <h4 id="General">General Topics</h4>
       <p>
         How to use the
         <a href="General/HowToUseLJCProjects.html">LJCProjects</a> code.
@@ -33,7 +33,7 @@
         How to add <a href="General/AddCustomControls.html">LJC Custom Controls</a> to the ToolBox.
       </p>
 
-      <h4>DataAccess</h4>
+      <h4 id="DataAccess">DataAccess</h4>
       <p>
         How to Configure DataAccess connection string using
         <a href="DataAccess/ConfigDataAccessWithBuilder.html">DbConnectionStringBuilder</a>.
@@ -51,7 +51,7 @@
         from an LJCGridRow.
       </p>
 
-      <h4>SQLManager</h4>
+      <h4 id="SQLManager">SQLManager</h4>
       <p>
         The Example <a href="SQLManager/DataObject.html">Data Object</a>.
       </p>
@@ -77,7 +77,7 @@
         <a href="SQLManager/UpdateWithFilters.html">Filters</a>.
       </p>
 
-      <h4>ProvinceSQLManager</h4>
+      <h4 id="ProvinceManager">ProvinceSQLManager</h4>
       <p>
         The <a href="ProvinceManager/SmartDataObject.html">Smart Data Object</a>.
       </p>
