--- a/HTML/General/HowToUseLJCProjects.html
+++ b/HTML/General/HowToUseLJCProjects.html
@@ -80,18 +80,18 @@
   LJCDataAccessTest     ADO.NET Data Access Test Code</pre>
       </p>
       <p>
-        Copy the "Libraries" folders and subfolders from CoreAssemblies if you
-        are going to develop with WinForms.<br />
-        This project builds the following assemblies:
+        Copy the following projects and the "Libraries" folders and subfolders
+        from CoreAssemblies if you are going to develop with WinForms.<br />
+        These projects build the following assemblies:
         <pre style="font-size: 9pt">
   LJCWinFormCommon      WinForm Common Library
-  LJCWinFormControls    WinForm Control Library</pre>
+  LJCWinFormControls    WinForm Control Library
+  LJCDBMessage          Data Message Library
+  LJCGridDataLib        Grid Helper Library</pre>
       </p>
       <p>
         Copy the following projects for advanced message-based data access.
         <pre style="font-size: 9pt">
-  LJCDBMessage          Data Message Library
-  LJCGridDataLib        Grid Helper Library (For WinForms development.)
   LJCDBDataAccess       Message-based Data Access Library
   LJCTextDataReader     Text DataReader Library
   LJCDBClientLib        Message-based Data Access Client Library
