--- a/HTML/SQLManager/Delete.html
+++ b/HTML/SQLManager/Delete.html
@@ -31,6 +31,9 @@
         How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
       <pre class="code">
+<span class='keyWord'>using</span> LJCDBClientLib;
+<span class='keyWord'>using</span> LJCNetCommon;
+
 <span class='comment'>// Delete a data record.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> Delete(string connectionString, <span class='commonType'>string</span> providerName)
 {
