--- a/HTML/SQLManager/Add.html
+++ b/HTML/SQLManager/Add.html
@@ -31,6 +31,9 @@
         How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
   <pre class="code">
+<span class='keyWord'>using</span> LJCDBClientLib;
+<span class='keyWord'>using</span> LJCDBMessage;
+
 <span class='comment'>// Add a data record.</span>
 <span class='modifier'>internal</span> Province Add(Province province, <span class='commonType'>string</span> connectionString
   , <span class='commonType'>string</span> providerName)
