--- a/HTML/SQLManager/Add.html
+++ b/HTML/SQLManager/Add.html
@@ -33,6 +33,7 @@
   <pre class="code">
 <span class='keyWord'>using</span> LJCDBClientLib;
 <span class='keyWord'>using</span> LJCDBMessage;
+<span class='keyWord'>using</span> System.Data;
 
 <span class='comment'>// Add a data record.</span>
 <span class='modifier'>internal</span> Province Add(Province province, <span class='commonType'>string</span> connectionString
