--- a/HTML/SQLManager/RetrieveWithRowValues.html
+++ b/HTML/SQLManager/RetrieveWithRowValues.html
@@ -42,6 +42,7 @@
 <span class='keyWord'>using</span> LJCGridDataLib;
 <span class='keyWord'>using</span> LJCNetCommon;
 <span class='keyWord'>using</span> LJCWinFormControls;
+<span class='keyWord'>using</span> System.Data;
 
 <span class='comment'>// Retrieve data using saved row values.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> RetrieveWithRowValues(<span class="userType">LJCDataGrid</span> ljcGrid
