--- a/HTML/ProvinceManager/RetrieveProvince.html
+++ b/HTML/ProvinceManager/RetrieveProvince.html
@@ -31,6 +31,8 @@
         specifically for use with the Province table and Province Data Object.
       </p>
       <pre class="code">
+<span class='keyWord'>using</span> LJCNetCommon;
+
 <span class='comment'>// Retrieve a Data Object.</span>
 <span class='modifier'>internal</span> <span class="userType">Province</span> RetrieveProvince(string connectionString, <span class='commonType'>string</span> providerName)
 {
