--- a/HTML/ProvinceManager/UpdateProvince.html
+++ b/HTML/ProvinceManager/UpdateProvince.html
@@ -31,12 +31,14 @@
         specifically for use with the Province table and Province Data Object.
       </p>
       <pre class="code">
+<span class='keyWord'>using</span> LJCNetCommon;
+
 <span class='comment'>// Update a Data Object.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateProvince(<span class="userType">Province</span> province, <span class='commonType'>string</span> connectionString
-, <span class='commonType'>string</span> providerName)
+  , <span class='commonType'>string</span> providerName)
 {
   <span class='commonType'>var</span> manager = <span class='keyWord'>new</span> <span class='userType'>ProvinceSQLManager</span>(null, null, connectionString
-  , providerName);
+    , providerName);
 
   province.Description = <span class='text'>"Updated Description"</span>;
 
