--- a/HTML/SQLManager/Retrieve.html
+++ b/HTML/SQLManager/Retrieve.html
@@ -54,6 +54,7 @@ See the Technical Documentation for more information.</pre>
 <span class='keyWord'>using</span> LJCDBClientLib;
 <span class='keyWord'>using</span> LJCDBMessage;
 <span class='keyWord'>using</span> LJCNetCommon;
+<span class='keyWord'>using</span> System.Collections.Generic;
 <span class='keyWord'>using</span> System.Data;
 
 <span class='comment'>// Selecting data with the SQLManager object.</span>
