--- a/HTML/SQLManager/UpdateWithKeys.html
+++ b/HTML/SQLManager/UpdateWithKeys.html
@@ -41,6 +41,7 @@ and column2 = "Something"</pre>
       <pre class="code">
 <span class='keyWord'>using</span> LJCDBClientLib;
 <span class='keyWord'>using</span> LJCNetCommon;
+<span class='keyWord'>using</span> System.Collections.Generic;
 
 <span class='comment'>// Updating data with Keys using the SQLManager object.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithKeys(Province province, <span class="commonType">string</span> connectionString, <span class="commonType">string</span> providerName)
