--- a/HTML/ProvinceManager/LoadProvince.html
+++ b/HTML/ProvinceManager/LoadProvince.html
@@ -36,7 +36,7 @@
 <span class='keyWord'>using</span> LJCWinFormControls;
 
 <span class='comment'>// Populate a grid with data.</span>
-<span class='modifier'>internal</span> <span class='commonType'>void</span> LoadManager(LJCDataGrid ljcGrid, <span class='commonType'>string</span> connectionString
+<span class='modifier'>internal</span> <span class='commonType'>void</span> LoadManager(<span class="userType">LJCDataGrid</span> ljcGrid, <span class='commonType'>string</span> connectionString
   , <span class='commonType'>string</span> providerName)
 {
   <span class='commonType'>var</span> manager = <span class='keyWord'>new</span> <span class='userType'>ProvinceSQLManager</span>(null, null, connectionString
