--- a/HTML/ProvinceManager/ProvinceSpecificManager.html
+++ b/HTML/ProvinceManager/ProvinceSpecificManager.html
@@ -42,6 +42,8 @@
 <span class='keyWord'>using</span> LJCDBMessage;
 <span class='keyWord'>using</span> LJCNetCommon;
 <span class='keyWord'>using</span> LJCWinFormControls;
+<span class='keyWord'>using</span> System.Collections.Generic;
+<span class='keyWord'>using</span> System.Data;
 
 <span class='xmlComment'>/// &lt;summary&gt;Provides Province SQL data methods.&lt;/summary&gt;</span>
 <span class='modifier'>public</span> <span class='refType'>class</span> <span class='userType'>ProvinceSQLManager</span>
